# flaneur

./: .gitignore  CLAUDE.md  PROJECT_STATE.md  README.md  form_answer.md  project_overview.md  pyproject.toml
.claude/skills/ablation/: SKILL.md
.claude/skills/analyze-run/: SKILL.md
.claude/skills/apply-fix/: SKILL.md
.claude/skills/eval-report/: SKILL.md
.claude/skills/improve-model/: SKILL.md
.claude/skills/project-changelog/: SKILL.md
.claude/skills/weave-eval/: SKILL.md
configs/: config.yaml
configs/data/: gowalla.yaml
configs/experiment/: default.yaml  lgcn_gowalla_full.yaml  lgcn_gowalla_test.yaml
configs/model/: lightgcn.yaml
derive/: server.py
derive/lib/: agent_tools.py  gowalla.py
derive/static/: index.html
derive/static/css/: style.css
derive/static/js/: animation.js  app.js  chat.js  compare.js  explain.js  leaderboard.js  map.js  report.js  timeline.js
prompts/: agent_system.txt  explain_user.txt  reflection.txt
scripts/: create_eval_report.py  create_workflow_report.py  run_reg_ablation.sh
src/: data.py  evaluate.py  evaluate_weave.py  infer.py  main.py  model.py  train.py
terraform/: main.tf  outputs.tf  terraform.tfvars.example  user_data.sh  variables.tf
vis_spatial/: about.md  app.py  utils.py
vis_spatial/dataloader_inspector/: tab.py
vis_spatial/dataset_overview/: tab.py
vis_spatial/graph_structure/: tab.py
vis_spatial/train_test_split/: tab.py
