[project]
name = "flaneur"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "hydra-core>=1.3.2",
    "jax>=0.6.2",
    "jaxlib>=0.6.2",
    "numpy>=2.2.6",
    "omegaconf>=2.3.0",
    "optax>=0.2.7",
    "plotly>=6.5.2",
    "scipy>=1.15.3",
    "streamlit>=1.54.0",
    "rich>=14.0.0",
    "wandb>=0.25.0",
]
